--- a/app1/argo-test-app1.yml
+++ b/app1/argo-test-app1.yml
@@ -1,21 +1,32 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: svc-argo-test-app1
+  ports:
+  - port: 80
+    targetPort: 80
+  selector:
+    app: argo-test-app1
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: argo-test-app
+  name: argo-test-app1
 spec:
   replicas: 1
   revisionHistoryLimit: 3
   selector:
     matchLabels:
-      app: argo-test-app
+      app: argo-test-app1
   template:
     metadata:
       labels:
-        app: argo-test-app
+        app: argo-test-app1
     spec:
       containers:
       - image: nginx:stable
-        name: argo-test-app
+        name: argo-test-app1
         imagePullPolicy: Always
         ports:
         - containerPort: 80    
